[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ship.gd" type="Script" id=1]
[ext_resource path="res://models/ship/ship.tscn" type="PackedScene" id=2]
[ext_resource path="res://Rocket.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/ship_explode.wav" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]

[node name="Ship" type="RigidBody"]
mass = 8.0
contacts_reported = 1
contact_monitor = true
axis_lock_linear_z = true
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="ShipModel" parent="." instance=ExtResource( 2 )]

[node name="RightRocket" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 1.25, 0.1, 0 )

[node name="LeftRocket" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -1.25, 0.1, 0 )

[node name="TopRocket" parent="." instance=ExtResource( 3 )]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 1.25, 0 )

[node name="BottomRocket" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.25, 0 )

[node name="SFXDestroy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Ship_body_entered"]
